k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: musiceshop
  labels:
    app: musiceshop
    environment: production
